# peak_finding

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
scripts/: build.ps1  clean.ps1  setup.ps1  test.ps1
src/peak_finding/: __init__.py  _peak_finding.c  _peak_finding.pxd  _peak_finding.pyx  _peak_finding_utils.c  _peak_finding_utils.pxd  _peak_finding_utils.pyx  interface.c  interface.pyx
tests/: test_peaks.py  test_utils.py
